reestrutura a modelagem do banco de dados
