# internal/api/api.go
@@ -65,52 +65,67 @@ func NewAPI(pool *pgxpool.Pool, logger *zap.Logger) API {
 }
 
 // Autentica usuário
-// (POST /login)
-func (api API) PostLogin(w http.ResponseWriter, r *http.Request) *spec.Response {
+// (POST /applications/{id}/login)
+func (api API) PostApplicationsIDLogin(w http.ResponseWriter, r *http.Request, id string) *spec.Response {
+	applicationUUID, err := uuid.Parse(id)
+	if err != nil {
+		return spec.PostApplicationsIDLoginJSON400Response(spec.Error{Feedback: "ID da aplicação inválido: " + err.Error()})
+	}
+
 	var credentials spec.LoginCredentials
 
 	// decodifica body armazenando dados nas credenciais
-	err := json.NewDecoder(r.Body).Decode(&credentials)
+	err = json.NewDecoder(r.Body).Decode(&credentials)
 	if err != nil {
-		return spec.PostLoginJSON400Response(spec.Error{Feedback: "Dados inválidos: " + err.Error()})
+		return spec.PostApplicationsIDLoginJSON400Response(spec.Error{Feedback: "Dados inválidos: " + err.Error()})
 	}
 
 	// valida dados de entrada
 	if err := api.validator.validate.Struct(credentials); err != nil {
-		return spec.PostLoginJSON400Response(spec.Error{Feedback: api.validator.Translate(err)})
+		return spec.PostApplicationsIDLoginJSON400Response(spec.Error{Feedback: api.validator.Translate(err)})
 	}
 
 	// busca usuário no banco de dados
-	user, err := api.store.GetUser(r.Context(), string(credentials.Email))
+	user, err := api.store.GetUser(r.Context(), postgresql.GetUserParams{
+		ApplicationID: applicationUUID,
+		Email:         string(credentials.Email),
+	})
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
-			return spec.PostLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
+			return spec.PostApplicationsIDLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
 		}
 		api.logger.Error("Falha ao buscar usuário", zap.String("email", string(credentials.Email)), zap.Error(err))
-		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
 	// verifica status
 	if user.Status == "inactive" {
-		return spec.PostLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário está inativo"})
+		return spec.PostApplicationsIDLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário está inativo"})
 	}
 
 	// compara senhas
 	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(credentials.Password)); err != nil {
 		if errors.Is(err, bcrypt.ErrMismatchedHashAndPassword) {
-			return spec.PostLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
+			return spec.PostApplicationsIDLoginJSON400Response(spec.Error{Feedback: "E-mail ou senha inválidos"})
 		}
 		api.logger.Error("Falha comparar hash com senha", zap.String("password", string(credentials.Password)), zap.Error(err))
-		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+	}
+
+	// recupera grupo de permissões
+	group, err := api.store.GetPermissionsGroup(r.Context(), user.GroupID)
+	if err != nil {
+		api.logger.Error("Falha ao tentar buscar grupo por user.GroupId", zap.Error(err))
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
 	// mapeia grupos (json)
 	groups := make(map[string]interface{})
-	json.Unmarshal(user.Groups, &groups)
+	json.Unmarshal(group, &groups)
 
 	// verifica se o grupo da aplicação está na lista de grupos do usuário
 	if groups[credentials.Application] == nil {
-		return spec.PostLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário cadastrado, mas sem acesso à aplicação"})
+		return spec.PostApplicationsIDLoginJSON401Response(spec.Unauthorized{Feedback: "Usuário cadastrado, mas sem acesso à aplicação"})
 	}
 
 	// monta UUIDs
@@ -121,14 +136,14 @@ func (api API) PostLogin(w http.ResponseWriter, r *http.Request) *spec.Response 
 	application, err := api.store.GetApplication(r.Context(), applicationId)
 	if err != nil {
 		api.logger.Error("Falha ao tentar buscar aplicação por applicationId", zap.Error(err))
-		return spec.PostUsersJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
 	// busca permissões do grupo na aplicação
 	permissions, err := api.store.GetPermissionsGroup(r.Context(), groupId)
 	if err != nil {
 		api.logger.Error("Falha ao tentar buscar permissões por groupId", zap.Error(err))
-		return spec.PostUsersJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
 	// cria token JWT
@@ -145,9 +160,9 @@ func (api API) PostLogin(w http.ResponseWriter, r *http.Request) *spec.Response 
 	signedToken, err := token.SignedString([]byte(application.Secret.String()))
 	if err != nil {
 		api.logger.Error("Falha ao assinar token", zap.String("token", token.Raw), zap.Error(err))
-		return spec.PostLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
+		return spec.PostApplicationsIDLoginJSON500Response(spec.InternalServerError{Feedback: "internal server error"})
 	}
 
 	// retorna token JWT para o cliente
-	return spec.PostLoginJSON200Response(spec.LoginResponse{Token: signedToken, Feedback: "sessão iniciada"})
+	return spec.PostApplicationsIDLoginJSON200Response(spec.LoginResponse{Token: signedToken, Feedback: "sessão iniciada"})
 }
